Fixes overflow/padding bug

--- a/style.css
+++ b/style.css
@@ -44,7 +44,8 @@
 }
 
 #titanbuttonmodal {
-  padding: none;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 .embed-container {
